- Fixed bug #51905 (ReflectionParameter fails if default value is an array with an access to self::)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@299766 c90b9560-bf6c-de11-be94-00142212c4b1